--- a/viral.html
+++ b/viral.html
@@ -8,7 +8,7 @@
 <h3><a href="index.html">Home</a> | <a href="about.html">About Scott</a></h3>
 <h1> His viral Videos </h1>
 <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
+src="https://www.youtube.com/shorts/MoHXTnhoMTA">
 </iframe>
 </body>
 </html>
