--- a/viral.html
+++ b/viral.html
@@ -10,6 +10,6 @@
 <iframe width="420" height="315"
 src="https://www.youtube.com/shorts/MoHXTnhoMTA">
 </iframe>
-<p>This is 
+<p>This is a clip of Scott's funniest video. Scott is trying to put mentos into a bottle of coke. As you can see it doesn't end very well.</p>
 </body>
 </html>
