--- a/viral.html
+++ b/viral.html
@@ -8,19 +8,16 @@
 <h3><a href="index.html">Home</a> | <a href="about.html">About Scott</a></h3>
 <h1> His funniest and most viral videos </h1>
 <h2>This is Scott's funniest video</h2>
-<iframe width="420" height="315"
-src="https://www.youtube.com/shorts/MoHXTnhoMTA">
-</iframe>
+<object data="https://www.youtube.com/embed/IBH5vJh1ixo"
+width="560" height="315"></object>
 <p>This is a clip of Scott's funniest video. Scott is trying to put mentos into a bottle of coke. As you can see it doesn't end very well.</p>
 <h2>This is Scott's most viral video</h2>
-<iframe width="420" height="315"
-src="https://www.youtube.com/shorts/IBH5vJh1ixo">
-</iframe>
+<object data="http://www.youtube.com/embed/W7qWa52k-nE"
+width="560" height="315"></object>
 <p>This is a clip of Scott's most viral video. In it he talks about how people should stop vaping</p>
 <h2>This is a bonus funny clip</h2>
-<iframe width="420" height="315"
-src="https://www.youtube.com/shorts/9WTuEO0MVXU">
-</iframe>
+<object data="https://www.youtube.com/embed/9WTuEO0MVXU"
+width="560" height="315"></object>
 <p>This a bonus clip I put in. Scott is reacting to a scary video and he gets jumpscared.</p>
 </body>
 </html>
