--- a/viral.html
+++ b/viral.html
@@ -8,11 +8,11 @@
 <h3><a href="index.html">Home</a> | <a href="about.html">About Scott</a></h3>
 <h1> His funniest and most viral videos </h1>
 <h2>This is Scott's funniest video</h2>
-<object data="https://www.youtube.com/embed/IBH5vJh1ixo"
+<object data="https://www.youtube.com/embed/MoHXTnhoMTA"
 width="560" height="315"></object>
 <p>This is a clip of Scott's funniest video. Scott is trying to put mentos into a bottle of coke. As you can see it doesn't end very well.</p>
 <h2>This is Scott's most viral video</h2>
-<object data="http://www.youtube.com/embed/W7qWa52k-nE"
+<object data="https://www.youtube.com/embed/IBH5vJh1ixo"
 width="560" height="315"></object>
 <p>This is a clip of Scott's most viral video. In it he talks about how people should stop vaping</p>
 <h2>This is a bonus funny clip</h2>
