--- a/viral.html
+++ b/viral.html
@@ -3,6 +3,7 @@
 <head> 
 <Title> Scott's Best Moments </title>
 	<link rel="stylesheet" href="main.css">
+	<meta name="referrer" content="strict-origin-when-cross-origin"/>
 </head>
 <body>
 <h3><a href="index.html">Home</a> | <a href="about.html">About Scott</a></h3>
