--- a/viral.html
+++ b/viral.html
@@ -10,15 +10,15 @@
 <h1> His funniest and most viral videos </h1>
 <h2>This is Scott's funniest video</h2>
 <object data="https://www.youtube.com/embed/MoHXTnhoMTA"
-class="center-video" width="560" height="315"></object>
+width="560" height="315"style="display:block; margin:0 auto;"></object>
 <p>This is a clip of Scott's funniest video. Scott is trying to put mentos into a bottle of coke. As you can see it doesn't end very well.</p>
 <h2>This is Scott's most viral video</h2>
 <object data="https://www.youtube.com/embed/IBH5vJh1ixo"
-class="center-video" width="560" height="315"></object>
+width="560" height="315"style="display:block; margin:0 auto;"></object>
 <p>This is a clip of Scott's most viral video. In it he talks about how people should stop vaping</p>
 <h2>This is a bonus funny clip</h2>
 <object data="https://www.youtube.com/embed/9WTuEO0MVXU"
-class="center-video" width="560" height="315"></object>
+width="560" height="315"style="display:block; margin:0 auto;"></object>
 <p>This a bonus clip I put in. Scott is reacting to a scary video and he gets jumpscared.</p>
 </body>
 </html>
