--- a/viral.html
+++ b/viral.html
@@ -4,6 +4,7 @@
 <Title> Scott's Best Moments </title>
 	<link rel="stylesheet" href="main.css">
 	<meta name="referrer" content="strict-origin-when-cross-origin"/>
+	<link rel="icon" type="image/png" href="scottsmall.png">
 </head>
 <body>
 <h3><a href="index.html">Home</a> | <a href="about.html">About Scott</a></h3>
